[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Dag/Run3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Dag/Fall0.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Dag/Jump0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Dag/Run4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Dag/Run5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Dag/Run2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Dag/Run1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Dag/Idle0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Dag/Run0.png" type="Texture" id=10]
[ext_resource path="res://PNG/bg_snow.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Dag/Fire0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Dag/Fire1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Dag/dead.png" type="Texture" id=14]
[ext_resource path="res://PNG/bg_snow_layers/bg9_e.png" type="Texture" id=15]
[ext_resource path="res://PNG/bg_snow_layers/bg9_f.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 2
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -720
limit_bottom = 360
smoothing_enabled = true
editor_draw_limits = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 35, 8.514 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"
frame = 3
playing = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 11 )
centered = false
offset = Vector2( 0, -360 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
offset = Vector2( 0, -640 )
transform = Transform2D( 1, 0, 0, 1, 0, -640 )
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource( 16 )
centered = false
offset = Vector2( 0, -360 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.142395, 0.195943 )
shape = SubResource( 2 )

[node name="bg9_e" type="Sprite" parent="."]
position = Vector2( 1208.9, -631.291 )
texture = ExtResource( 15 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
